// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationPage matches the snapshot 1`] = `
<div
  className="notificationpage-wrap"
>
  <Dimmer
    backgroundColor="positive"
    className=""
    show={true}
    style={Object {}}
  />
  <div
    className="notificationpage-content"
  >
    <h1
      className="notificationpage-title"
    >
      test title
    </h1>
    <p>
      test message
    </p>
    <h3
      className="notificationpage-text"
    >
      In the meantime, you can...
    </h3>
    <ul
      className="notificationpage-list"
    >
      <li
        className="notificationpage-list-item"
      >
        Go to the 
        <Link
          to="/app/dashboard"
        >
          dashboard
        </Link>
      </li>
      <li
        className="notificationpage-list-item"
      >
        Go to the 
        <Link
          to="/login"
        >
          login
        </Link>
         page
      </li>
      <li
        className="notificationpage-list-item"
      >
        Go to our 
        <a
          href="https://projectified/support/"
        >
          support
        </a>
         page
      </li>
    </ul>
  </div>
  <ProjectPowered
    className="projectpowered-logo"
    logoColor="#fff"
    taglineColor="#9c9c9c"
  />
</div>
`;

exports[`NotificationPage matches the snapshot without a message 1`] = `
<div
  className="notificationpage-wrap"
>
  <Dimmer
    backgroundColor="positive"
    className=""
    show={true}
    style={Object {}}
  />
  <div
    className="notificationpage-content"
  >
    <h1
      className="notificationpage-title"
    >
      test title
    </h1>
    <p />
    <h3
      className="notificationpage-text"
    >
      In the meantime, you can...
    </h3>
    <ul
      className="notificationpage-list"
    >
      <li
        className="notificationpage-list-item"
      >
        Go to the 
        <Link
          to="/app/dashboard"
        >
          dashboard
        </Link>
      </li>
      <li
        className="notificationpage-list-item"
      >
        Go to the 
        <Link
          to="/login"
        >
          login
        </Link>
         page
      </li>
      <li
        className="notificationpage-list-item"
      >
        Go to our 
        <a
          href="https://projectified/support/"
        >
          support
        </a>
         page
      </li>
    </ul>
  </div>
  <ProjectPowered
    className="projectpowered-logo"
    logoColor="#fff"
    taglineColor="#9c9c9c"
  />
</div>
`;

exports[`NotificationPage matches the snapshot without the dashboard link 1`] = `
<div
  className="notificationpage-wrap"
>
  <Dimmer
    backgroundColor="positive"
    className=""
    show={true}
    style={Object {}}
  />
  <div
    className="notificationpage-content"
  >
    <h1
      className="notificationpage-title"
    >
      test title
    </h1>
    <p />
    <h3
      className="notificationpage-text"
    >
      In the meantime, you can...
    </h3>
    <ul
      className="notificationpage-list"
    >
      <li
        className="notificationpage-list-item"
      >
        Go to the 
        <Link
          to="/login"
        >
          login
        </Link>
         page
      </li>
      <li
        className="notificationpage-list-item"
      >
        Go to our 
        <a
          href="https://projectified/support/"
        >
          support
        </a>
         page
      </li>
    </ul>
  </div>
  <ProjectPowered
    className="projectpowered-logo"
    logoColor="#fff"
    taglineColor="#9c9c9c"
  />
</div>
`;
